[#13255] XSD comparison tool